--- a/css/utility.css
+++ b/css/utility.css
@@ -10,6 +10,15 @@
 
   border: 1px solid black;
 }
+.cmd-field{
+  height: 30px;
+  width: 99%;
+
+  font-family: monospace;
+  font-size: 25px;
+
+  /* border: none; */
+}
 .stat-line {
   background-color: gray;
 }
