--- a/css/main.css
+++ b/css/main.css
@@ -28,3 +28,13 @@ body {
 
   text-align: right;
 }
+#mute{
+  margin-top:337px;
+  width:50px;
+  height:50px;
+
+  background-image: url(../images/mutedButton.png);
+}
+#mute:hover{
+  background-image: url(../images/muteButton.png);
+}
