--- a/css/utility.css
+++ b/css/utility.css
@@ -29,3 +29,16 @@
 .score:after {
   content: ',';
 }
+
+#mute{
+  position:absolute;
+  margin-top:-240px;
+  margin-left:556px;
+  width:50px;
+  height:50px;
+
+  background-image: url(../images/mutedButton.png);
+}
+#mute:hover{
+  background-image: url(../images/muteButton.png);
+}
